# geek-vol12

./: README.md
apps/backend/: pyproject.toml
apps/backend/src/: pyproject.toml
apps/backend/src/dynamic_scraper/dynamic_scraper/: items.py  middlewares.py  settings.py
apps/backend/src/dynamic_scraper/dynamic_scraper/spiders/: hackathon.py
apps/backend/src/scraper/: add_domain.py  pyproject.toml  scraper.py  settings.py  test.py
apps/backend/src/scraper/scraper/: settings.py
apps/backend/src/scraper/scraper/scraper/: settings.py
apps/backend/src/scraper/scraper/scraper/spiders/: scraper.py
apps/backend/src/scraper/scraper/spiders/: scraper.py  temp.py
apps/frontend/: .prettierrc.json  package.json  pnpm-lock.yaml
apps/frontend/src/app/: page.tsx
apps/frontend/src/app/auth/: layout.tsx
apps/frontend/src/components/auth/: back-button.tsx  card-wrapper.tsx  header.tsx  login-button.tsx  login-form.tsx  social.tsx
