[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["nonlem <nonlem7432@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scrapy = "^2.11.2"
playwright = "^1.45.1"
scrapy-playwright = "^0.0.40"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
